update comment concerning Java versions